# Mesh-Dissolver

./: CMakeLists.txt  LICENSE  README.md
include/: ExtractFaceCommand.h  GenerateParticleCommand.h  HelloWorld.h  MeshDissolver.h  ParticleConnector.h
src/: CMakeLists.txt  ExtractFaceCommand.cpp  GenerateParticleCommand.cpp  HelloWorld.cpp  MeshDissolver.cpp  ParticleConnector.cpp  main.cpp
